<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_screen_operation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#EFEFEF"
            android:padding="10dp"
            tools:text="123456789"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="end|bottom"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_screen_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF"
            android:padding="10dp"
            tools:text="=123"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="end|bottom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/divide"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_mult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/multiply"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_substract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/substraction"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btn_cls"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/cls"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/sum"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/equal"/>



</LinearLayout>